tests/policy/perf/policy-small.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: webapp
      role: db
  ingress:
    - from:
        - podSelector:
          matchLabels:
            role: frontend
      ports:
        - protocol: TCP
          port: 80
